# ChessMate-ROS2

./: .gitignore  LICENSE  README.md  TESTING_GUIDE.md  build_x86.sh  debug_collision.py  demo_stockfish_integration.py  simple_robot_test.py  test_kinematics_demo.py  test_stockfish_basic.py  test_stockfish_integration.py
ChessBoard/: Button.h  Button.ino  ChessBoard.ino  Display.h  Display.ino  Mock.h  Mock.ino  README.md  Sensor.h  Sensor.ino  Serial.h  Serial.ino  Utils.h  test_chessboard.sh  test_chessboard_controller.py
Robot/: Arm.h  Arm.ino  Head.h  Head.ino  Robot.ino  test_robot.sh  test_robot_controller.py
chessmate_dev_ws/: ARCHITECTURE_AND_DATA_FLOW.md  README.md  build_arm.sh  launch_production_game.sh  setup_and_build.sh  setup_ros2_fixed.bash  source_arm.sh  source_x86.sh  test_boardstate.py  test_calculate_move_service.py  test_step6_complete.sh  test_step6_full_game.py
chessmate_dev_ws/scripts/: build_x86.sh  test_rotary_encoder.py
chessmate_dev_ws/src/chessmate_description/: CMakeLists.txt  README.md
chessmate_dev_ws/src/chessmate_description/launch/: chessmate_complete.launch.py
chessmate_dev_ws/src/chessmate_engine/: README.md  setup.py
chessmate_dev_ws/src/chessmate_engine/chessmate_engine/: __init__.py  chess_engine_server.py  chess_game_manager.py  message_converters.py  simple_chess_engine.py  stockfish_interface.py  topic_chess_engine_server.py  topic_game_management.py
chessmate_dev_ws/src/chessmate_engine/test/: test_copyright.py
chessmate_dev_ws/src/chessmate_hardware/: README.md  setup.cfg  setup.py
chessmate_dev_ws/src/chessmate_hardware/chessmate_hardware/: __init__.py  arduino_communication_node.py  config_loader.py  fixed_end_to_end_game.py  rotary_encoder_node.py  test_arduino_serial.py  test_controller_communication.py  test_end_to_end_game.py  test_integration_comprehensive.py  test_ros2_hardware.py  topic_arduino_clients.py  topic_arduino_communication.py  topic_engine_client.py  topic_game_management.py  unified_arduino_bridge.py  unified_hardware_test.py
chessmate_dev_ws/src/chessmate_hardware/config/: unified_hardware_config.yaml
chessmate_dev_ws/src/chessmate_hardware/launch/: distributed_testing.launch.py  host_visualization.launch.py  integration_testing.launch.py  pi_headless_testing.launch.py  topic_engine_testing.launch.py
chessmate_dev_ws/src/chessmate_kinematics/: CMakeLists.txt
chessmate_dev_ws/src/chessmate_msgs/: CMakeLists.txt  README.md
scripts/: cleanup_chessmate_processes.sh  deploy_to_pi.sh  setup_permissions.sh  test_chessmate.sh  test_chessmate_system.sh  test_complete_game.py  validate_structure.py
src/chessmate_description/: CMakeLists.txt  package.xml
src/chessmate_description/launch/: chess_animation_demo.launch.py  display.launch.py
src/chessmate_description/scripts/: chess_animation_demo.py  test_collision_avoidance.py
src/chessmate_description/urdf/: scara_robot.urdf.xacro
src/chessmate_engine/: package.xml  setup.cfg
src/chessmate_engine/chessmate_engine/: __init__.py  chess_engine_server.py  message_converters.py  simple_chess_engine.py  stockfish_interface.py
src/chessmate_hardware/: README.md  package.xml  setup.py
src/chessmate_hardware/chessmate_hardware/: arduino_communication_node.py  config_loader.py  game_management_node.py  gpio_abstraction.py  lcd_display_node.py  robot_animation_controller.py  rotary_encoder_node.py  unified_arduino_bridge.py  unified_hardware_test.py
src/chessmate_hardware/config/: unified_hardware_config.yaml
src/chessmate_hardware/launch/: hardware_nodes.launch.py  unified_hardware.launch.py
src/chessmate_hardware/scripts/: demo_hardware_integration.py  test_hardware_integration.py  validate_integration.py
src/chessmate_kinematics/: package.xml
src/chessmate_kinematics/chessmate_kinematics/: __init__.py  chess_coordinate_mapper.py  scara_kinematics.py
src/chessmate_kinematics/config/: scara_config.yaml
src/chessmate_kinematics/scripts/: kinematics_server.py  test_coordinate_mapping.py
src/chessmate_kinematics/test/: test_scara_kinematics.py
src/chessmate_msgs/: CMakeLists.txt  package.xml
src/chessmate_msgs/msg/: ArduinoCommand.msg
