<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chessmate_engine</name>
  <version>0.0.0</version>
  <description>ChessMate chess engine integration with Stockfish</description>
  <maintainer email="rubbotix@gmail.com">smtuser</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>chessmate_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
